--- a/style.css
+++ b/style.css
@@ -60,3 +60,20 @@ form input.button{
     color: white;
     
 }
+h5{
+width: 100%;
+font-size: 1.2rem;
+padding: 9px 0;
+background-color: #e05ccf;
+text-align: center;
+color: white;
+}
+.feedback{
+    display: none;
+}
+.message-content{
+    color: rgb(56, 168, 131);
+}
+.show{
+    display: block;
+}
